--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,4 @@ pip-selfcheck.json
 # http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,pycharm+all,venv,virtualenv,git
+# End of https://www.toptal.com/developers/gitignore/api/python,pycharm,pycharm+all,venv,virtualenv,git
